--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,4 +1,4 @@
-MYSQL_HOST: mysql-{{ ENVIRONMENT }}.dev-ops.chat
+MYSQL_HOST: "mysql-{{ ENVIRONMENT }}.dev-ops.chat"
 MYSQL_USER: root
 MYSQL_PASSWORD: ExpenseApp1
 APP_LOCATION: /app
