--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
-BACKEND_HOST: "backend.app-{{ ENVIRONMENT }}-ops.chat"
+BACKEND_HOST: "backend.app-{{ ENVIRONMENT }}-dev-ops.chat"
 APP_LOCATION: /usr/share/nginx/html
 COMPONENT: frontend
