--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -12,13 +12,13 @@
 - name: include common role
   include_role:
     name: common
-    tasks_from: main
+    #tasks_from: main
  
 
+# trigger handler through notify
 - name: copy expense config
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
-  notify:
+  notify: 
   - Restart Nginx
-
