--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -1,14 +1,20 @@
 - name: remove existing directory
+  tags:
+  - deployment
   ansible.builtin.file:
     path: "{{ APP_LOCATION }}" # backend folder /app, fronend /usr/share/nginx/html
     state: absent
 
 - name: create app directory
+  tags:
+  - deployment
   ansible.builtin.file:
     path: "{{ APP_LOCATION }}" # backend folder /app, fronend /usr/share/nginx/html
     state: directory # when create use directory
 
 - name: download app code
+  tags:
+  - deployment
   ansible.builtin.unarchive:
     src: "https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ COMPONENT }}-v2.zip"
     dest: "{{ APP_LOCATION }}" # this will unzip code here
