--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,5 @@
-BACKEND_HOST: 127.0.0.1
+BACKEND_HOST: "backend.app-{{ ENVIRONMENT }}.dev-ops.chat"
+APP_LOCAION: /usr/share/nginx/html
+COMPONENT: frontend
 APP_LOCATION: /usr/share/nginx/html
 COMPONENT: frontend
